--- a/notebooks/result_analytics.ipynb
+++ b/notebooks/result_analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "337fd460",
+   "id": "6d51981a",
    "metadata": {},
    "source": [
     "# Analyze Results"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4aad8c74",
+   "id": "9c284394",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "481cab6e",
+   "id": "f55b2ce1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,24 +73,18 @@
     "    return abs(np.array(m))\n",
     "\n",
     "def compute_kappa_from_cm(matrix):\n",
+    "    cidot = matrix.sum(axis=1)\n",
+    "    cdotj = matrix.sum(axis=0)\n",
+    "    N = matrix.sum()\n",
     "    \n",
     "    def w(i, j):\n",
     "        return abs(i - j)\n",
     "    \n",
     "    def e(i, j):\n",
-    "        return cidot(i) * cdotj(j) / N()\n",
+    "        return cidot[i] * cdotj[j] / N\n",
     "        \n",
     "    def c(i, j):\n",
     "        return matrix[i, j]\n",
-    "    \n",
-    "    def cidot(i):\n",
-    "        return matrix[i, :].sum()\n",
-    "        \n",
-    "    def cdotj(j):\n",
-    "        return matrix[:,j].sum()\n",
-    "    \n",
-    "    def N():\n",
-    "        return matrix.sum()\n",
     "    \n",
     "    nom = 0\n",
     "    dis = 0\n",
@@ -106,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f76b9fc6",
+   "id": "e1396de6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf7cb5b1",
+   "id": "f1467bff",
    "metadata": {},
    "outputs": [],
    "source": [
