--- a/notebooks/results.ipynb
+++ b/notebooks/results.ipynb
@@ -19,10 +19,10 @@
     "    project_name='hit-prediction-ismir2020',\n",
     "    table_name='hit_prediction',\n",
     "    filter_git_dirty=True,\n",
-    "    date_filter='> \\'2021-08-04 16:20:00\\'',\n",
+    "    date_filter='> \\'2021-01-04 16:20:00\\'',\n",
     "    columns=['id', 'date', 'sourcefile', 'outcome'],\n",
     "#     filters=['sourcefile LIKE \\'plans/hspd/regression_%%.py\\''],\n",
-    "    filters=['sourcefile LIKE \\'plans/hspd/regression_cleaned%%_%%all_yanghitscore.py\\''],\n",
+    "    filters=['sourcefile LIKE \\'plans/ijsc/regression_last%%mels%%.py\\''],\n",
     "#     filters=['sourcefile LIKE \\'plans/ordinal%%\\''],\n",
     ")\n",
     "\n",
@@ -70,8 +70,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_results['approach'] = best_results['approach'].apply(lambda v: v.replace('mean_std', 'ms'))\n",
+    "best_results['approach'] = best_results['approach'].apply(lambda v: v.replace('mean_std', 'ms').replace('_peak', '_1pe').replace('_weeks', '_2we').replace('_lfmlc', '_3lc').replace('_lfmpc', '_4pc').replace('_yanghitscore', '_5hs'))\n",
+    "best_results['sourcefile_new'] = best_results['sourcefile'].apply(lambda v: v.replace('_peak', '_1peak').replace('_weeks', '_2weeks').replace('_lfmlc', '_3lfmlc').replace('_lfmpc', '_4lfmpc').replace('_yanghitscore', '_5yanghitscore'))\n",
     "# display(best_results[['date', 'approach', 'mae', 'rmse', 'pearsonr', 'spearmanr', 'kendalltau']])\n",
+    "\n",
+    "# round cols\n",
+    "for c in ['spearmanr', 'kendalltau']:\n",
+    "    best_results[c] = best_results[c].apply(lambda v: round(v, 3))\n",
+    "\n",
+    "best_results.sort_values(by='sourcefile_new', inplace=True)\n",
+    "    \n",
     "display(best_results[['approach', 'spearmanr', 'kendalltau']])\n",
     "\n",
     "# display(best_results[['approach', 'mae']].plot.bar(x='approach', y='mae', title='Wide and Deep MAE', figsize=(12, 6)))\n",
@@ -92,7 +100,7 @@
     "\n",
     "splits1 = []\n",
     "for split in split_names:\n",
-    "    splits1.append(results.iloc[2][split]['1'].loc['spearmanr'])\n",
+    "    splits1.append(results.iloc[3][split]['1'].loc['spearmanr'])\n",
     "\n",
     "splits2 = []\n",
     "for split in split_names:\n",
@@ -157,7 +165,7 @@
     "ordered_means_delta = np.sort(means_delta)\n",
     "lower = np.percentile(ordered_means_delta, ((1-alpha)/2)*100)\n",
     "upper = np.percentile(ordered_means_delta, (alpha+(1-alpha)/2)*100)\n",
-    "print(\"low:\", lower, \"mean:\", np.mean(ordered_means_delta), \"high:\", upper)"
+    "print(lower, np.mean(ordered_means_delta), upper)"
    ]
   },
   {
@@ -166,37 +174,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy import stats\n",
+    "from scipy.stats import wilcoxon\n",
     "\n",
-    "print(splits1)\n",
-    "print(splits2)\n",
-    "print()\n",
-    "\n",
-    "s1 = []\n",
-    "s2 = []\n",
-    "\n",
-    "num_samples = 25\n",
-    "\n",
-    "for _ in range(num_samples):\n",
-    "    sample_mean = np.random.choice(splits1, size=len(splits1)).mean()\n",
-    "    s1.append(sample_mean)\n",
-    "    \n",
-    "    sample_mean = np.random.choice(splits2, size=len(splits2)).mean()\n",
-    "    s2.append(sample_mean)\n",
-    "\n",
-    "s1 = splits1\n",
-    "s2 = splits2\n",
-    "\n",
-    "for f in [stats.wilcoxon, stats.ttest_rel, stats.ttest_ind, stats.ks_2samp, stats.epps_singleton_2samp]:\n",
-    "    print(f(s1, s2))"
+    "wilcoxon(splits1, splits2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -215,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
