--- a/notebooks/result_analytics.ipynb
+++ b/notebooks/result_analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6d51981a",
+   "id": "32b654c0",
    "metadata": {},
    "source": [
     "# Analyze Results"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c284394",
+   "id": "be330f8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
     "    date_filter='>= \\'2022-04-07 10:35:00\\'',\n",
     "    columns=['id', 'sourcefile', 'outcome'],\n",
     "#     filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/%%ordinal_one_hot_all_lfmlc.py\\''],\n",
-    "    filters=['sourcefile LIKE \\'plans/hsppw/qcut_hsp-s%%.py\\''],\n",
+    "    filters=['sourcefile LIKE \\'plans/hsppw/qcut_hsp-l%%.py\\''],\n",
     "#     filters=['sourcefile LIKE \\'plans/ordinal%%\\''],\n",
     ")\n",
     "\n",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f55b2ce1",
+   "id": "cd38017c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1396de6",
+   "id": "9a65a55f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,13 +173,21 @@
     "\n",
     "    \n",
     "df = pd.DataFrame(result_scores)\n",
-    "df.sort_values(by=['model', 'approach', 'classes']).drop_duplicates(subset=id_cols).to_csv('/tmp/test.csv')"
+    "df = df.sort_values(by=['model', 'approach', 'classes']).drop_duplicates(subset=id_cols)\n",
+    "#df = df.round(3)\n",
+    "\n",
+    "#df = df[(df['classes'] == '005') | (df['classes'] == '040')]\n",
+    "df = df[(df['model'] == 'mlpc') & (df['classes'] == '040')]\n",
+    "# df = df[(df['model'] == 'mlpr') | (df['model'] == 'mlpc')]\n",
+    "\n",
+    "display(df)\n",
+    "df.to_csv('/tmp/test.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1467bff",
+   "id": "7a4ec7d3",
    "metadata": {},
    "outputs": [],
    "source": [
