--- a/notebooks/analyze_lastfm_labels.ipynb
+++ b/notebooks/analyze_lastfm_labels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "statewide-grove",
+   "id": "8e84ef19",
    "metadata": {},
    "source": [
     "# Analyze last.fm Labels"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "spanish-musical",
+   "id": "10f8b57e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "accessory-spotlight",
+   "id": "941ea054",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "amended-patio",
+   "id": "45d36e31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "opponent-nicaragua",
+   "id": "c1dc1bb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -104,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
